--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		
 	</head>
 	<body>
-   		<h1>By Mac Abrams</h1>
+   		<h1>Lightning</h1>
 		<div class="content">
 			<canvas class="panel" data-processing-sources="sketch.pde"></canvas>
 		</div>
