--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<body>
    		<h1>Lightning</h1>
 		<div class="content">
-			<canvas class="panel" data-processing-sources="sketch.pde"></canvas>
+			<canvas class="panel" data-processing-sources="zeus.pde"></canvas>
 		</div>
 	    	<div class="footer">
-			footer
+			By Mac Abrams
 	    	</div>
 	</body>
 </html>
