--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
    		<h1>Lightning</h1>
 		<div class="content">
-			<canvas class="panel" data-processing-sources="zeus.pde"></canvas>
+			<canvas class="panel" data-processing-sources="sketch.pde"></canvas>
 		</div>
 	    	<div class="footer">
 			By Mac Abrams
